2009-02-16  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump version

=========================== 2.25.2 ===========================

2009-02-16  Ray Strode  <rstrode@redhat.com>

	* gconf/default.path.in: move the directory used by the
	defaults mechanism, so that its effects are mandatory
	(bug 558490).

2009-02-15  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump version

=========================== 2.25.1 ===========================

2009-02-15  Matthias Clasen  <mclasen@redhat.com>

	* NEWS: Updates

2009-02-15  Matthias Clasen  <mclasen@redhat.com>

	Bug 566716 – Update the projects URL

	* README:
	* gconf/gconf-internals.c: Update project website url.
	String change. Requested by Leonardo Ferreira Fontenelle

2009-02-15  Matthias Clasen  <mclasen@redhat.com>

	Bug 569258 – Use send_destination in dbus policy

	* defaults/org.gnome.GConf.Defaults.conf: Use send_destination.
	Pointed out by Vincent Untz

2009-02-15  Matthias Clasen  <mclasen@redhat.com>

	Bug 565312 – Use g_timeout_add_seconds

	* backends/xml-backend.c: Trivial: Use g_timeout_add_seconds.
	Patch by Paul Kishimoto.

2009-02-15  Matthias Clasen  <mclasen@redhat.com>

	Bug 558490 – New policykit mechanism uses hard-coded gconf path

	* gconf/default.path.in: Add the directory that is used by the
	defaults mechanism

	* defaults/Makefile.am: Define SYSGCONFDIR
	* defaults/gconf-defaults.c: Use SYSGCONFDIR instead of hardcoding
	/etc/gconf. Pointed out by Vincent Untz

2009-02-12  Michael Meeks  <michael.meeks@novell.com>

	* backends/markup-tree.c (parse_value_element): turn off a
	bogus error message for missing types, which we don't use,
	saves creating, l10n'ing & destroying 11k bogus messages on
	login.

2009-02-10  Michael Meeks  <michael.meeks@novell.com>

	* backends/markup-tree.c (write_value_element): close empty
	value elements immediately to save parsing time.

	* backends/markup-tree.c: instead of indenting with spaces, use