@@ -642,17 +642,17 @@ key_changed_callback(GConfClient* client,
 
   if (value == NULL)
     {
-      gtk_label_set(GTK_LABEL(label), "&lt;unset&gt;");
+      gtk_label_set_text(GTK_LABEL(label), "&lt;unset&gt;");
     }
   else
     {
       if (value-&gt;type == GCONF_VALUE_STRING)
         {
-          gtk_label_set(GTK_LABEL(label), gconf_value_get_string(value));
+          gtk_label_set_text(GTK_LABEL(label), gconf_value_get_string(value));
         }
       else
         {
-          gtk_label_set(GTK_LABEL(label), "&lt;wrong type&gt;");
+          gtk_label_set_text(GTK_LABEL(label), "&lt;wrong type&gt;");
         }
     }
 }
@@ -767,9 +767,9 @@ main(int argc, char** argv)
                        NULL);
 
 
-  gtk_signal_connect(GTK_OBJECT(entry), "activate",
-                     GTK_SIGNAL_FUNC(entry_activated_callback),
-                     client);
+  g_signal_connect(G_OBJECT(entry), "activate",
+                   G_CALLBACK(entry_activated_callback),
+                   client);
   
   gtk_widget_show_all(window);
 
