@@ -1,3 +1,11 @@
+2009-02-23  Matthias Clasen  <mclasen@redhat.com>
+
+	Bug 572187 – Remove deprecated GTK+ symbols
+
+	* gconf/gnome-testclient.c:
+	* gconf/testgconfclient.c:
+	* doc/intro-article.sgml: Remove deprecated GTK+ api.
+
 2009-02-16  Matthias Clasen  <mclasen@redhat.com>
 
 	* configure.in: Bump version
